# faceless-content

./: .clinerules  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTENT_IDEAS.md  PIPELINE_README.md  README.md  SETUP_GUIDE.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: smart-committer.agent.md
.github/instructions/: python.instructions.md  services.instructions.md  testing.instructions.md
.github/workflows/: ci.yml
documentation/: ARCHITECTURE.md  BUSINESS_PLANS.md  CONTENT_IDEAS.md  DEVELOPMENT_ANTI_PATTERNS.md  FUTURE_IMPROVEMENTS.md  SETUP_GUIDE.md  SUGGESTIONS.md  YOUTUBE_IMPROVEMENTS.md
documentation/content_ideas/: _general.md  ai-future-tech.md  animal-facts.md  book-summaries.md  celebrity-net-worth.md  conspiracy-mysteries.md  finance.md  geography-facts.md  health-wellness.md  history.md  life-hacks.md  luxury.md  mockumentary-howmade.md  motivation.md  mythology-folklore.md  netflix-recommendations.md  philosophy.md  psychology-facts.md  relationship-advice.md  scary-stories.md  sleep-relaxation.md  space-astronomy.md  survival-tips.md  tech-gadgets.md  true-crime.md  unsolved-mysteries.md
pipeline/: config.py  config_validator.py  content_metadata.py  env_config.py  finish_video.py  hashtags.py  hooks.py  image_generator.py  pipeline.py  posting_schedule.py  script_enhancer.py  story_scraper.py  subtitle_generator.py  test_apis.py  text_overlay.py  thumbnail_generator.py  tiktok_formats.py  tts_generator.py  video_assembler.py
shared/prompts/: __init__.py  image_prompts.py
src/faceless/: __init__.py  __main__.py
src/faceless/cli/: __init__.py  commands.py
src/faceless/clients/: __init__.py  azure_openai.py  base.py
src/faceless/config/: __init__.py  settings.py
src/faceless/core/: __init__.py  enums.py  exceptions.py  hashtags.py  hooks.py  models.py  posting_schedule.py  text_overlay.py  tiktok_formats.py
src/faceless/pipeline/: __init__.py  orchestrator.py
src/faceless/services/: __init__.py  content_source_service.py  enhancer_service.py  image_service.py  metadata_service.py  quality_service.py  research_service.py  scraper_service.py  subtitle_service.py  thumbnail_service.py  trending_service.py  tts_service.py  video_service.py
src/faceless/services/sources/: __init__.py  base.py  hackernews_source.py  news_source.py  openlibrary_source.py  reddit_source.py  wikipedia_source.py  youtube_source.py
src/faceless/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_azure_openai.py  test_base_client.py  test_cli.py  test_content_metadata.py  test_content_sources.py  test_content_sources_extended.py  test_enhancer_service.py  test_exceptions.py  test_hashtags.py  test_hooks.py  test_image_service.py  test_logging.py  test_models.py  test_new_services.py  test_orchestrator.py  test_posting_schedule.py  test_scraper_service.py  test_settings.py  test_source_adapters.py  test_subtitle_service.py  test_text_overlay.py  test_thumbnail_service.py  test_tiktok_formats.py  test_tts_service.py  test_video_service.py
